WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79229
Web Inspector: [REGRESSION] Console xhr logging is broken for async xhrs since
r107672
.
https://bugs.webkit.org/show_bug.cgi?id=79229
Summary
Web Inspector: [REGRESSION] Console xhr logging is broken for async xhrs sinc...
Vsevolod Vlasov
Reported
2012-02-22 05:31:25 PST
Console xhr logging is broken for async xhrs since
r107672
.
Attachments
Patch
(6.24 KB, patch)
2012-02-22 08:03 PST
,
Vsevolod Vlasov
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2012-02-22 08:03:58 PST
Created
attachment 128218
[details]
Patch
Vsevolod Vlasov
Comment 2
2012-02-22 08:46:56 PST
Committed
r108506
: <
http://trac.webkit.org/changeset/108506
>
Csaba Osztrogonác
Comment 3
2012-02-22 09:30:36 PST
It made 2 tests crash on Qt:
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r108506%20%2834089%29/results.html
Pavel Feldman
Comment 4
2012-02-22 09:32:44 PST
1 0x423d88 /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/bin/DumpRenderTree() [0x423d88] 2 0x7ff14409faf0 /lib/libc.so.6(+0x33af0) [0x7ff14409faf0] 3 0x7ff147ef60c7 /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZN7WebCore19TextResourceDecoder6decodeEPKcm+0x27) [0x7ff147ef60c7] 4 0x7ff147e3c8cf /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZN7WebCore18InspectorPageAgent21cachedResourceContentEPNS_14CachedResourceEPN3WTF6StringEPb+0x2cf) [0x7ff147e3c8cf] 5 0x7ff147e448b4 /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZN7WebCore22InspectorResourceAgent15getResponseBodyEPN3WTF6StringERKS2_S3_Pb+0x154) [0x7ff147e448b4] 6 0x7ff1487d9b87 /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZN7WebCore30InspectorBackendDispatcherImpl23Network_getResponseBodyElPNS_15InspectorObjectE+0x117) [0x7ff1487d9b87] 7 0x7ff1487d28cc /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZN7WebCore30InspectorBackendDispatcherImpl8dispatchERKN3WTF6StringE+0x5dc) [0x7ff1487d28cc] 8 0x7ff147e28f7f /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZN7WebCore28InspectorBackendDispatchTask7onTimerEPNS_5TimerIS0_EE+0xdf) [0x7ff147e28f7f] 9 0x7ff14801ff66 /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/lib/libQtWebKit.so.4(_ZN7WebCore12ThreadTimers24sharedTimerFiredInternalEv+0xa6) [0x7ff14801ff66] 10 0x7ff1457c7509 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN7QObject5eventEP6QEvent+0xa9) [0x7ff1457c7509] 11 0x7ff145caa26c /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(_ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent+0xac) [0x7ff145caa26c] 12 0x7ff145caf6fd /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(_ZN12QApplication6notifyEP7QObjectP6QEvent+0x13d) [0x7ff145caf6fd] 13 0x7ff1457b507c /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN16QCoreApplication14notifyInternalEP7QObjectP6QEvent+0x8c) [0x7ff1457b507c] 14 0x7ff1457e965e /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(+0x1d665e) [0x7ff1457e965e] 15 0x7ff1457e643d /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(+0x1d343d) [0x7ff1457e643d] 16 0x7ff142c5e8c2 /lib/libglib-2.0.so.0(g_main_context_dispatch+0x1f2) [0x7ff142c5e8c2] 17 0x7ff142c62748 /lib/libglib-2.0.so.0(+0x42748) [0x7ff142c62748] 18 0x7ff142c628fc /lib/libglib-2.0.so.0(g_main_context_iteration+0x6c) [0x7ff142c628fc] 19 0x7ff1457e6123 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE+0x73) [0x7ff1457e6123] 20 0x7ff145d5ccde /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(+0x2eccde) [0x7ff145d5ccde] 21 0x7ff1457b3c32 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN10QEventLoop13processEventsE6QFlagsINS_17ProcessEventsFlagEE+0x32) [0x7ff1457b3c32] 22 0x7ff1457b40a4 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE+0x164) [0x7ff1457b40a4] 23 0x7ff1457b9ce9 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(_ZN16QCoreApplication4execEv+0xb9) [0x7ff1457b9ce9] 24 0x424e86 /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/bin/DumpRenderTree() [0x424e86] 25 0x7ff14408ac4d /lib/libc.so.6(__libc_start_main+0xfd) [0x7ff14408ac4d] 26 0x4111b9 /usr/local/google/code/chromium/src/third_party/WebKit/WebKitBuild/Release/bin/DumpRenderTree() [0x4111b9]
Adrienne Walker
Comment 5
2012-02-22 11:14:40 PST
Committed
r108525
: <
http://trac.webkit.org/changeset/108525
>
Vsevolod Vlasov
Comment 6
2012-02-22 11:39:08 PST
Filed
https://bugs.webkit.org/show_bug.cgi?id=79263
for qt tests
Yuta Kitamura
Comment 7
2012-02-22 19:44:32 PST
Two tests are timing out on Mac Debug (instead of crashing). I updated test_expectations.txt as such.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug