Web Inspector: [REGRESSION] Console xhr logging is broken for async xhrs since r107672. https://bugs.webkit.org/show_bug.cgi?id=79229

Reviewed by Pavel Feldman.

Source/WebCore:

Test: http/tests/inspector/console-xhr-logging-async.html

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::setInitialScriptContent):
* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::didFinishLoading):

LayoutTests:

* http/tests/inspector/console-xhr-logging-async-expected.txt: Added.
* http/tests/inspector/console-xhr-logging-async.html: Added.

Canonical link: https://commits.webkit.org/96306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108506 268f45cc-cd09-0410-ab3c-d52691b4dbfc